--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@ html {
 
 body {
   background-color: var(--light-shade);
-  border-top: 1.6rem solid var(--main-brand-color);
 }
 
 .main-container {
@@ -31,10 +30,17 @@ body {
 
 /* Header */
 header {
+  position: sticky;
+  top: 0;
+  background-color: var(--light-shade);
+  border-top: 1.6rem solid var(--main-brand-color);
+  z-index: 1;
+}
+header .main-container {
+  height: clamp(5rem, 10vw, 7rem);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 7rem;
 }
 header img { width: clamp(12rem, 40vw, 24rem) }
 header nav {
