--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,7 @@ html { scroll-behavior: smooth }
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(22, 20, 24, 0.4) border-box;
+  background: rgba(22, 20, 24, 0.5) border-box;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,29 +28,31 @@ html { scroll-behavior: smooth }
   align-items: center;
 }
 .hero-logo {
-  width: clamp(30rem, 30vw, 56rem);
+  flex: 1;
+  width: clamp(20rem, 20vw, 56rem);
   height: 100%;
 }
 .hero-text {
+  flex: 2;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  margin-left: clamp(1rem, 3vw, 6rem);
+  margin-left: clamp(2rem, 4vw, 8rem);
   color: var(--light-shade);
 }
 .hero-subheading {
-  font-size: clamp(1.8rem, 3vw, 3rem);
+  font-size: clamp(1.6rem, 4vw, 3rem);
   font-weight: 400;
-  line-height: 1.4;
+  line-height: 1.8;
   margin-bottom: clamp(2rem, 2vw, 4rem);
 }
 .hero-cta {
   background-color: var(--main-brand-color);
   color: var(--light-shade);
-  font-size: clamp(1.8rem, 3vw, 3rem);
+  font-size: clamp(1.4rem, 4vw, 2.8rem);
   font-weight: 400;
-  padding: clamp(1rem, 1vw, 2rem) clamp(2rem, 1vw, 4rem);
+  padding: clamp(0.8rem, 1vw, 1.2rem) clamp(2rem, 1vw, 4rem);
   border-radius: 1rem;
   text-decoration: none;
 }
@@ -124,7 +126,7 @@ html { scroll-behavior: smooth }
       grid-template-columns: 1fr 1fr;
   }
   .hero-content .main-container { flex-direction: column }
-  .hero-logo { width: clamp(20rem, 60vw, 40rem) }
+  .hero-logo { width: clamp(12rem, 20vw, 20rem) }
   .hero-text {
     margin: 0;
     text-align: center;
