Updated background color

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --light-shade: #EAE6E5;
+  --light-shade: #FAF9F9;
   --light-accent: #7D7982;
   --main-brand-color: #CF0A2C;
   --dark-accent: #BB8551;
