--- a/css/resources.css
+++ b/css/resources.css
@@ -1,6 +1,6 @@
 .page-title {
   text-align: center;
-  font-size: clamp(2rem, 4vw, 4rem);
+  font-size: var(--heading-1);
   padding: clamp(1rem, 2vw, 2rem) 0;
   color: var(--dark-shade);
 }
@@ -13,18 +13,15 @@
   padding: clamp(2rem, 4vw, 6rem) 0;
 }
 .resource-title {
-  font-size: clamp(1.4rem, 2vw, 2.2rem);
+  font-size: var(--heading-3);
   margin-bottom: clamp(0.6rem, 1vw, 1rem);
-  line-height: 1.6;
 }
 .resource-text {
-  font-size: clamp(1.2rem, 2vw, 1.8rem);
-  line-height: 1.6;
+  font-size: var(--base-font-size);
 }
 .resource ol {
-  font-size: clamp(1.2rem, 2vw, 1.8rem);
+  font-size: var(--base-font-size);
   list-style: upper-alpha;
   margin-left: clamp(2rem, 6vw, 6rem);
-  line-height: 1.6;
 }
 .resource a { color: var(--light-accent) }
