--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,12 @@
   --dark-shade: #161418;
   
   /* Font Sizes */
-  --heading-1: clamp(3.4rem, 4vw, 4rem);
-  --heading-2: clamp(2.4rem, 2vw, 3rem);
-  --heading-3: clamp(1.8rem, 3vw, 2.4rem);
-  --heading-4: clamp(1.4rem, 2vw, 2rem);
-  --base-font-size: clamp(1.2rem, 2vw, 1.8rem);
-  --base-nav-size: clamp(1rem, 3vw, 1.8rem);
+  --heading-1: clamp(2.2rem, 4vw, 2.6rem);
+  --heading-2: clamp(2rem, 2vw, 2.4rem);
+  --heading-3: clamp(1.8rem, 3vw, 2.2rem);
+  --heading-4: clamp(1.6rem, 2vw, 2rem);
+  --base-font-size: clamp(1.2rem, 2vw, 1.6rem);
+  --base-nav-size: clamp(0.8rem, 3vw, 1.4rem);
   
   /* Misc */
   --base-border-radius: 1rem;
@@ -36,7 +36,7 @@ body {
 }
 
 .main-container {
-  max-width: 140rem;
+  max-width: clamp(100rem, 60vw, 140rem);
   margin: 0 auto;
   padding: 0 clamp(1rem, 2vw, 2rem);
 }
@@ -46,16 +46,16 @@ header {
   position: sticky;
   top: 0;
   background-color: var(--light-shade);
-  border-top: clamp(0.8rem, 2vw, 1.6rem) solid var(--main-brand-color);
+  border-top: clamp(0.2rem, 2vw, 1rem) solid var(--main-brand-color);
   z-index: 1;
 }
 header .main-container {
-  height: clamp(4rem, 9vw, 7rem);
+  height: clamp(4rem, 8vw, 6rem);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-header img { width: clamp(10rem, 30vw, 24rem) }
+header img { width: clamp(10rem, 30vw, 18rem) }
 header nav {
   display: flex;
   align-items: flex-end;
