--- a/css/home.css
+++ b/css/home.css
@@ -101,6 +101,7 @@ html { scroll-behavior: smooth }
 .benefit-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   color: var(--dark-shade);
   gap: clamp(1rem, 2vw, 2rem);
 }
